--- a/templates/about_me.html
+++ b/templates/about_me.html
@@ -6,6 +6,12 @@
     <title>About Me</title>
 </head>
 <body>
+    <h1>Hi, my name is Alexandros Karanikola, I am 30 years old, born in Australia, raised in Europe and now living in Australia for the last 12 years. The reason I chose a career in technology is because I have a passion for technology and I enjoy learning new things.</h1>
+    <ul>
+        history
+    </ul>
+
+
     <h2>Education</h2>
     <ul>
         <li>Graduate Certificate in Computing (Cloud Computing), Charles Sturt University, Expected 2024</li>
