Update README, added Dockerfile, task-definition.json

--- a/templates/about_me.html
+++ b/templates/about_me.html
@@ -6,11 +6,10 @@
     <title>About Me</title>
 </head>
 <body>
-    <h1>Hi, my name is Alexandros Karanikola, I am 30 years old, born in Australia, raised in Europe and now living in Australia for the last 12 years. The reason I chose a career in technology is because I have a passion for technology and I enjoy learning new things.</h1>
+    <h2>ME</h2>
     <ul>
-        history
+        Hi, my name is Alexandros Karanikola, I am 30 years old, born in Australia, raised in Europe and now living in Australia for the last 12 years. The reason I chose a career in technology is because I have a passion for technology and I enjoy learning new things.
     </ul>
-
 
     <h2>Education</h2>
     <ul>
@@ -36,3 +35,4 @@
     </ul>
 </nav>
 </html>
+docker push 285479333816.dkr.ecr.ap-southeast-2.amazonaws.com/my-resume-site:latest
