--- a/templates/about_me.html
+++ b/templates/about_me.html
@@ -27,6 +27,7 @@
     <ul>
         <li>CompTIA Cloud Essentials+</li>
         <li>Kubernetes: Explorer, Apprentice, Architect</li>
+        <li>Python fundamentals</li>
     </ul>
 </body>
 <nav>
@@ -35,4 +36,4 @@
     </ul>
 </nav>
 </html>
-docker push 285479333816.dkr.ecr.ap-southeast-2.amazonaws.com/my-resume-site:latest
+
